Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-39942

Loose Scan semi-join optimization: wrong usage for records per key

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 13.1
    • 13.1.1
    • Optimizer
    • None
    • Unexpected results
    • Q3/2026 Server Maintenance

    Description

      rec_per_key is used instead of actual_rec_per_key while performing loose scan semi-join optimization in Loose_scan_opt::check_ref_access_part1() [opt_subselect.h]

      main.subselect_sj_mat fails in --replay-server mode

      Attachments

        Issue Links

          Activity

            People

              bsrikanth Srikanth Bondalapati
              bsrikanth Srikanth Bondalapati
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 2d
                  2d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 7h Time Not Required
                  1d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.